--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <H1>
-    Shawnique Davis
-  </H1>
+  <head>
   </head>
   <body>
+   <H1>
+    Shawnique Davis
+   <H1>
+</html>
