--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <p>
      Alot of times,people look at me and ask if I ball.I tell them my Intrest and they just be like o ok.A little more about me is,I am a Sickle Cell patient.
        Have had Surgury and much more.O yea,I am the life of the party according to my friends.
-    </p>
+      <H1>here's my new page</H1>
+     He<a href="html?newpage.html">re it i</a>s!
+      </body>
   </html>
