--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>
      Alot of times,people look at me and ask if I ball.I tell them my Intrest and they just be like o ok.A little more about me is,I am a Sickle Cell patient.
        Have had Surgury and much more.O yea,I am the life of the party according to my friends.
-      <H1> Here's my new page</H1>!!
+      <H1> Here's my new page</H1>
      <a href="html/newpage.html">Here it is</a>!
       </body>
   </html>
