--- a/html/newpage.html
+++ b/html/newpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html
 <html lang="en-US">
-  <H1 style="DarkTurquoise;">This is my new page</H1>
+  <H1 style="color:DarkTurquoise;">This is my new page</H1>
   <p style="color:#FF00FF;">Here are some words</p>
 </html>
