--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+  <div class="navbar">
+    <li><a href="./">About</a></li>
+    <li><a href="html/publications">Publications</a></li>
+    <li><a href="html/research">Research</a></li>
+  </div>
+  <div class="main">
+    <div class="clearfix">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
